# dpino-Launchpad

./: .replit  pnpm-lock.yaml  replit.md
.agents/: agent_assets_metadata.toml
artifacts/api-server/src/routes/: index.ts  projects.ts  staking.ts  stats.ts
artifacts/dpino-launchpad/: index.html  package.json  vite.config.ts
artifacts/dpino-launchpad/.replit-artifact/: artifact.toml
artifacts/dpino-launchpad/src/: App.tsx  index.css
artifacts/dpino-launchpad/src/components/auth/: ProtectedRoute.tsx
artifacts/dpino-launchpad/src/context/: WalletGateContext.tsx
artifacts/dpino-launchpad/src/hooks/: useDpinoBalance.ts  useDpinoPrice.ts
artifacts/dpino-launchpad/src/pages/: admin.tsx  apply.tsx  dashboard.tsx  home.tsx  not-found.tsx  project-detail.tsx  projects.tsx  sign-in.tsx  sign-up.tsx  sso-callback.tsx  stake.tsx
artifacts/dpino-launchpad/src/providers/: SolanaWalletProvider.tsx
attached_assets/: Pasted-You-are-TENANTLY-Customer-Service-an-outbound-leasing-p_1775212454128.txt
contracts/: Anchor.toml  Cargo.toml  DEPLOY.md  devnet-test-keypair.json  package-lock.json  package.json  tsconfig.json
contracts/programs/dpino-ido/: Cargo.toml
contracts/programs/dpino-ido/src/: lib.rs
contracts/programs/dpino-staking/: Cargo.toml
contracts/programs/dpino-staking/src/: lib.rs
contracts/scripts/: test-devnet-connection.ts
contracts/tests/: ido.ts  staking.ts
lib/api-spec/: openapi.yaml
lib/db/src/schema/: index.ts  projects.ts  staking.ts
scripts/: package.json
scripts/src/: clear-db.ts
(+2 files in other folders)
