[package]
name = "dpino-ido"
version = "0.1.0"
description = "DPINO Launchpad — on-chain IDO program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dpino_ido"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang  = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl   = { version = "0.30.1", features = ["token"] }
